crates/panache-parser/tests/snapshots/yaml__yaml_cst_suite_2G84__03.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 312
expression: snapshot
---
case_id: 2G84/03
input: "--- |1+"
diagnostics:

cst:
YAML_STREAM@0..7
  YAML_DOCUMENT@0..7
    YAML_DOCUMENT_START@0..3 "---"
    WHITESPACE@3..4 " "
    YAML_SCALAR@4..7
      YAML_SCALAR_TEXT@4..7 "|1+"
